--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
   ],
   "peerDependencies": {
     "@vitejs/plugin-react": "^3.0.0",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.0.0 || ^5.0.0",
     "@vueuse/head": "0.x",
     "react": "^17",
     "react-dom": "^17",
     "react-helmet-async": "^1.0.0",
     "react-router-dom": "^6",
-    "vite": "^4.0.0",
+    "vite": "^4.0.0 || ^5.0.0",
     "vue": "^3.2.26",
     "vue-router": "^4.0.0"
   },
